core/unpackaged/main/default/objects/Case/fields/Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title__c</fullName>
    <label>Contact Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>