core/unpackaged/main/default/objects/Case/recordTypes/CRM_Support_Case.recordType-meta.xml
<RecordType>
    <fullName>CRM_Support_Case</fullName>
    <active>true</active>
    <businessProcess>CRM Support Process</businessProcess>
    <label>CRM Support Case</label>
</RecordType>