core/unpackaged/main/default/objects/Case/listViews/Support_Request_Case.listView-meta.xml
<ListView>
    <fullName>Support_Request_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Support Request</label>
    <queue>Support_Request</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>